# idscp2-rust

./: .gitignore  .rusty-hook.toml  CONTRIBUTING.md  Cargo.toml  Notes.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/actions-rs/: grcov.yml
.github/workflows/: ci-active-dev-branch.yml  ci.yml  codecoverage.yml  coverage.yml  dependency-audit.yml  rust.yml
idscp2_core/: Cargo.toml  build.rs
idscp2_core/benches/: idscp_connection.rs  tokio_idscp_connection.rs
idscp2_core/examples/client/: Cargo.toml
idscp2_core/src/: chunkvec.rs  fsm.rs  lib.rs  tokio_idscp_connection.rs  util.rs
idscp2_core/src/api/: idscp2_config.rs  mod.rs
idscp2_core/src/driver/: daps_driver.rs  mod.rs  ra_driver.rs
idscp2_core/src/driver/internal/: mod.rs  tpm.rs
idscp2_core/src/fsm_spec/: fsm.rs  fsm_tests.rs  mod.rs
idscp2_core/src/messages/: idscp_message_factory.rs  idscpv2_messages.proto  mod.rs
idscp2_default_drivers/: Cargo.toml
idscp2_default_drivers/src/: lib.rs
idscp2_default_drivers/src/rustls_channel/: mod.rs
idscp2_tests/: Cargo.toml
idscp_core/: Cargo.toml  build.rs
idscp_core/examples/client/src/: main.rs
idscp_core/src/: .gitignore  chunkvec.rs  fsm.rs  lib.rs  tokio_idscp_connection.rs
idscp_core/src/api/: idscp_configuration.rs  idscp_connection.rs  idscp_server.rs  mod.rs
idscp_core/src/drivers/: daps_driver.rs  mod.rs  ra_driver.rs  rat_driver.rs  secure_channel.rs
idscp_core/src/fsm/: alternating_bit.rs  fsm_timer.rs  mod.rs  ra_interface.rs  rat_interface.rs  sc_interface.rs
idscp_core/src/messages/: idscp2_messages.proto  idscp_message_factory.rs  idscpv2_messages.proto  mod.rs
idscp_default_drivers/: Cargo.toml  build.rs
idscp_default_drivers/src/: .gitignore  lib.rs
idscp_default_drivers/src/daps_drivers/: mod.rs  null_daps.rs
idscp_default_drivers/src/ra_drivers/: mod.rs
idscp_default_drivers/src/ra_drivers/null_ra/: mod.rs
idscp_default_drivers/src/rat_drivers/: mod.rs
idscp_default_drivers/src/rat_drivers/null_rat/: mod.rs
idscp_default_drivers/src/rustls_channel/: mod.rs
idscp_default_drivers/src/secure_channels/: mod.rs
idscp_default_drivers/src/secure_channels/openssl/: client.rs  mod.rs  server.rs
idscp_default_drivers/src/secure_channels/openssl/tests/resources/: own.crt  peer.crt
idscp_examples/: Cargo.toml
idscp_examples/examples/commandline_tunnel/: client.rs  common.rs  server.rs
idscp_socket_tunnel/: Cargo.toml
idscp_socket_tunnel/src/: main.rs
idscp_tests/: Cargo.toml  build.rs
idscp_tests/tests/: integration.rs
idscp_tests/tests/common/: mod.rs
test_pki/resources/openssl/: .gitignore  generate_test_pki.sh  golden_values
test_pki/resources/openssl/malicious_ca/: rootCA.crt  test_client.chain  test_client.crt  test_client.key
