[package]
name = "idscp2_core"
version = "0.1.0"
authors = [
    "Oliver Braunsdorf <oliver.braunsdorf@aisec.fraunhofer.de>",
    "Leon Beckmann <oliver.braunsdorf@aisec.fraunhofer.de>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinyvec = "1.6"
thiserror = "1.0"
log = "0.4"
protobuf = { version = "2.27.1", features = ["with-bytes"] }
bytes = "1.1"
futures = "0.3"
tokio = {version = "1.17", features = ["full"]}

[build-dependencies]
protoc-rust = "2.27.1"

[dev-dependencies]
env_logger = "0.9.0"
tokio-test = "0.4.2"
rand = "^0.8.5"
criterion = "0.3"

[[bench]]
name = "tokio_idscp_connection"
harness = false