[package]
name = "idscp2_tests"
version = "0.1.0"
authors = [
    "Oliver Braunsdorf <oliver.braunsdorf@aisec.fraunhofer.de>",
    "Leon Beckmann <oliver.braunsdorf@aisec.fraunhofer.de>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[test]]
name = "integration"
path = "tests/integration.rs"