[package]
name = "idscp_core"
version = "0.1.0"
authors = ["Oliver Braunsdorf <oliver.braunsdorf@aisec.fraunhofer.de>"]
edition = "2018"


[dependencies]
log = "0.4.8"
anyhow = "1.0.28"
thiserror = "1.0.20"
protobuf = { version = "2.8.1", features = ["with-bytes"] }
bytes = "1.0.1"
openssl = "0.10.28"

# canceble timer
cancellable-timer = "0.1.0"

[build-dependencies]
protoc-rust = "2.8.1"

[dev-dependencies]
rusty-hook = "0.10.1"
simple_logger = "1.4.0"