[package]
name = "idscp_default_drivers"
version = "0.1.0"
authors = [
"Oliver Braunsdorf <oliver.braunsdorf@aisec.fraunhofer.de>",
"Leon Beckmann <leon.beckmann@aisec.fraunhofer.de>",
"Konrad Hohentanner <konrad.hohentanner@aisec.fraunhofer.de"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
simple-logging = "2.0.2"
hex = "0.4.2"

[build-dependencies]
protoc-rust = "2.8.1"

[dependencies]
idscp_core = {path = "../idscp_core"}
log = "0.4.8"
anyhow = "1.0.28"
byteorder = "1.3.2"
calloop = "0.7.0"
protobuf = {version = "2.8.1", features = ["with-bytes"]}
bytes = "1.0.1"
openssl = "0.10.28"
