[package]
name = "idscp_examples"
version = "0.1.0"
authors = [
"Oliver Braunsdorf <oliver.braunsdorf@aisec.fraunhofer.de>",
"Leon Beckmann <leon.beckmann@aisec.fraunhofer.de>"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
idscp_core = { path = "../idscp_core" }
idscp_default_drivers = { path = "../idscp_default_drivers" }
env_logger = "0.7.1"
openssl = "0.10.28"

[[example]]
name = "commandline_tunnel_server"
path = "examples/commandline_tunnel/server.rs"

[[example]]
name = "commandline_tunnel_client"
path = "examples/commandline_tunnel/client.rs"