[package]
name = "idscp_tests"
version = "0.1.0"
authors = ["Oliver Braunsdorf <oliver.braunsdorf@aisec.fraunhofer.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
protobuf = {version = "2.8.1", features = ["with-bytes"]}

[dev-dependencies]
idscp_core = {path = "../idscp_core"}
idscp_default_drivers = {path = "../idscp_default_drivers"}
log = "0.4.8"
env_logger = "0.7.1"
openssl = "0.10.28"

[[test]]
name = "integration"
path = "tests/integration.rs"